adds lollipop launcher integration